<resources>
    <string name="app_name">CalorieNotebook</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_logger">Logger</string>
    <string name="title_activity">Activity</string>
    <string name="title_groups">Workouts</string>
    <string name="title_exercises">Exercises</string>

    <string name="add_to_group_title">Add to workouts</string>
    <string name="pick_exercise_title">Pick exercise</string>
    <string name="exercise_type_title">Pick exercise type</string>
    <string name="exercise_type_hint">Exercise type</string>

    <string name="logger_date_button">Logs Today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_exercise_btn_text">Add Exercise</string>
    <string name="log_name_here_placeholder">name</string>
    <string name="exercise_name_placeholder">name</string>
    <string name="include_group">Include Group</string>
    <string name="add_a_log_group">Add a workout</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username must contain minimum 3 characters</string>
    <string name="invalid_password">Password must be minimum 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="create_account">Or create an account if you don\'t have one</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="to_user_settings">Next</string>
    <string name="height">Height</string>
    <string name="birth_date">Birth date</string>
    <string name="weight">Weight</string>
    <string name="add_new_exercise">New Exercise</string>
    <string name="duration">Duration</string>
    <string name="notes">Notes</string>
    <string name="add_log">Add Log</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="exercise_category">Category</string>
    <string name="delete">Delete</string>
    <string name="textview_placeholder">TextView</string>
    <string name="pick_exercises">Pick Exercises</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="password">Password</string>

    <string name="google_client_id">211202412035-gqcv290q8g1700o13kd0d36qsjav58f3.apps.googleusercontent.com</string>

    <string name="incorect_credentials">Incorrect username or password</string>
    <string name="submit">Submit</string>
    <string name="more">More</string>
    <string name="pounds">Pounds</string>
    <string name="kilograms">Kilograms</string>
    <string name="centimeters">Centimeters</string>
    <string name="inches">Inches</string>
    <string name="Feet">Feet</string>
    <string name="something_wrong_happened">Something wrong happened</string>
    <string name="no_text">No text</string>
    <string name="no_workouts_with_exercises">You have no workouts with exercises to select from</string>
    <string name="go_back">Go Back</string>
    <string name="no_logs_to_show">No logs to show on this day</string>
    <string name="to_workouts">To workouts</string>
    <string name="weight_unit">Weight unit</string>
    <string name="height_unit">Height unit</string>
    <string name="no_chart_data">No data to be displayed yet. Start logging your activity</string>
    <string name="no_piechart_data">No data. Log some exercises</string>
    <string name="no_barchart_data">No data. Add some workouts with exercises</string>
    <string name="no_exercises_created_yet">No exercises created yet</string>
    <string name="no_workouts_created_yet">No workouts created yet</string>
    <string name="kcal">Kcal</string>
    <string name="your_most_preferred_workouts">Your most preferred workouts</string>
    <string name="gender">Gender</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_pass_message">You will receive the instructions to reset your password on email</string>

</resources>
