<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.eduardv.powerlogger.ui.units.UnitsViewModel" />

        <variable
            name="view"
            type="com.eduardv.powerlogger.ui.units.UnitsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/weightRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/weight"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/kiloButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilograms" />

            <RadioButton
                android:id="@+id/poundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pounds" />
        </RadioGroup>


        <RadioGroup
            android:id="@+id/heightRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weightRadioGroup">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/height"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/centimetersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centimeters" />

            <RadioButton
                android:id="@+id/inchesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inches" />

            <RadioButton
                android:id="@+id/feetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Feet" />
        </RadioGroup>

        <Button
            style="@style/MyAccentButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="@{v -> view.onConfirm()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>