<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_logger"
        android:name="com.example.powerlogger.ui.logger.LoggerFragment"
        android:label="@string/title_logger"
        tools:layout="@layout/fragment_logger" >
        <action
            android:id="@+id/action_navigation_logger_to_navigation_groups"
            app:destination="@id/navigation_groups" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.powerlogger.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_logger"
            app:destination="@id/navigation_logger" />
    </fragment>
    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.example.powerlogger.ui.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" />
</navigation>