<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/borderLeft"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:background="#101010" />

        <LinearLayout
            android:id="@+id/exerciseDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/formGroupCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exerciseCategoryNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="0.5"
                    android:text="@string/exercise_category" />

                <TextView
                    android:id="@+id/exerciseCategoryNameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:width="80dp"
                    android:text="waludaiudg wqieugqwieqw qiwyevqwie qwiyev ewqeuiohq" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/formGroupGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/formGroupCategory">

                <TextView
                    android:id="@+id/exerciseGroupsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="0.5"
                    android:text="@string/title_groups" />

                <TextView
                    android:id="@+id/exerciseGroupList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:width="80dp"
                    android:text="@string/textview_placeholder" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exerciseControls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/exerciseEditButton"
                    style="@style/MyButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:shadowColor="@color/transparent"
                    android:text="@string/edit" />

                <Button
                    android:id="@+id/exerciseDeleteButton"
                    style="@style/MyAccentButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
