<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.powerlogger.ui.register.RegisterViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/toUserSettingsButton"
                style="@style/MyButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_marginStart="161dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="162dp"
                android:enabled="false"
                android:text="@string/to_user_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassword" />

            <EditText
                android:id="@+id/registerPassword"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:addTextChangedListener="@{viewmodel.textWatcher}"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.registerRequestDTO.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

            <EditText
                android:id="@+id/registerConfirmPassword"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:addTextChangedListener="@{viewmodel.textWatcher}"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.confirmPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

            <EditText
                android:id="@+id/registerUsername"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="156dp"
                android:layout_marginEnd="100dp"
                android:addTextChangedListener="@{viewmodel.textWatcher}"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.registerRequestDTO.username}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/registerEmail"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:addTextChangedListener="@{viewmodel.textWatcher}"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.registerRequestDTO.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerUsername" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- TODO: Update blank fragment layout -->

    </FrameLayout>
</layout>
